# landlordmapper-chicago-data

./: README.md  pyproject.toml  workflow_geocodio.ipynb  workflow_landlords.ipynb  workflow_scrape.ipynb
classes/: base_data.py  base_geocodio.py  base_landlord_data.py  base_scrape.py
constants/: constants.py  landlord_fields.py
workflows/: workflow_geocodio.py  workflow_landlords.py  workflow_scrape.py
