[tool.poetry]
name = "landlordmapper-data"
version = "0.1.0"
description = ""
authors = ["dpederson95 <director@landlordmapper.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.24.0"
pandas = "^2.0.0"
tqdm = "^4.65.0"
nmslib = "^2.1.1"
sqlalchemy = "^2.0.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
word2number = "^1.1"
python-Levenshtein = "^0.21.0"
networkx = "^3.1"
scikit-learn = "^1.3.0"
ipykernel = "^6.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"